Enlace Base de Datos

--- a/EMigrant.App.Persistencia/EMigrant.App.Persistencia.csproj
+++ b/EMigrant.App.Persistencia/EMigrant.App.Persistencia.csproj
@@ -17,4 +17,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EMigrant.App.Dominio\EMigrant.App.Dominio.csproj" />
+  </ItemGroup>
+
 </Project>
